--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 asgiref==3.2.7
+dj-database-url==0.5.0
 Django==3.0.7
 django-crispy-forms==1.9.2
+django-environ==0.4.5
+django-heroku==0.3.1
+psycopg2==2.8.5
 pytz==2020.1
 sqlparse==0.3.1
+whitenoise==5.1.0
