--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==3.0.7
 django-crispy-forms==1.9.2
 django-environ==0.4.5
 django-heroku==0.3.1
+gunicorn==20.0.4
 psycopg2==2.8.5
 pytz==2020.1
 sqlparse==0.3.1
